--- a/cv.css
+++ b/cv.css
@@ -85,6 +85,7 @@ color: #888;
 .contact li img{
     text-align: left;
     width: 1.75rem;
+    height: 1.75rem;
 }
 .socials li{
     display: flex;
@@ -118,12 +119,14 @@ grid-template-columns: 5ch 1fr;
 @media screen and (max-width: 960px) {
 
     body{
-        padding: 2rem 1.5rem;
+        padding: 2rem 1rem;
         background-color: #888;
     }
     .resume_page{
         display: block;
+        padding: 1.5rem;
     }
+  
     .intro_section div{
         display: flex;
         justify-content: center;
@@ -136,4 +139,13 @@ grid-template-columns: 5ch 1fr;
     .abilities{
         margin-bottom: 1.5rem;
     }
+}
+
+@media screen and (max-width: 365px){
+    .intro_section img{
+        width: 250px;
+        height: 250px;
+        border-radius: 50%;
+        object-fit: cover;
+        }
 }
